# trepbot

./: .gitmodules  Basebot.cpp  Basebot.h  CMakeLists.txt  Makefile  README.md  SimpleStopFlag.h  StopFlag.h  Trepbot.cpp  Trepbot.h  basebot.cpp  basebot.h  main.cpp  simplestopflag.h  trepbot.cpp  trepbot.h
tests/: CMakeLists.txt  README.md  blank-test.cpp  blanktest.cpp
transport/: CurlEngine.cpp  CurlEngine.h  Escaper.h  Httper.h  curlengine.cpp  curlengine.h  escaper.h
url/: TelegramUrlBuilder.cpp  TelegramUrlBuilder.h  UrlBuilder.h  YandexDiskUrlBuilder.cpp  YandexDiskUrlBuilder.h  YandexOAuthUrlBuilder.cpp  YandexOAuthUrlBuilder.h  YandexUrlBuilder.cpp  YandexUrlBuilder.h  telegramurlbuilder.cpp  telegramurlbuilder.h  urlbuilder.h  yandexurlbuilder.cpp  yandexurlbuilder.h
